--- a/TTkWidgets/index.html
+++ b/TTkWidgets/index.html
@@ -51,7 +51,8 @@ from .treeview    import *
 from .treewidget  import *
 from .graph       import *
 from .menubar     import *
-from .TTkPickers  import *</code></pre>
+from .TTkPickers  import *
+from .spinbox     import *</code></pre>
 </details>
 </section>
 <section>
@@ -122,6 +123,10 @@ from .TTkPickers  import *</code></pre>
 <div class="desc"></div>
 </dd>
 <dt><code class="name"><a title="TermTk.TTkWidgets.spacer" href="spacer.html">TermTk.TTkWidgets.spacer</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
+<dt><code class="name"><a title="TermTk.TTkWidgets.spinbox" href="spinbox.html">TermTk.TTkWidgets.spinbox</a></code></dt>
 <dd>
 <div class="desc"></div>
 </dd>
@@ -204,6 +209,7 @@ from .TTkPickers  import *</code></pre>
 <li><code><a title="TermTk.TTkWidgets.scrollarea" href="scrollarea.html">TermTk.TTkWidgets.scrollarea</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.scrollbar" href="scrollbar.html">TermTk.TTkWidgets.scrollbar</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.spacer" href="spacer.html">TermTk.TTkWidgets.spacer</a></code></li>
+<li><code><a title="TermTk.TTkWidgets.spinbox" href="spinbox.html">TermTk.TTkWidgets.spinbox</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.splitter" href="splitter.html">TermTk.TTkWidgets.splitter</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.table" href="table.html">TermTk.TTkWidgets.table</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.tableview" href="tableview.html">TermTk.TTkWidgets.tableview</a></code></li>
