--- a/TTkWidgets/label.html
+++ b/TTkWidgets/label.html
@@ -192,7 +192,7 @@ class TTkLabel(TTkWidget, TColor, TText):
 </ul>
 <h3>Subclasses</h3>
 <ul class="hlist">
-<li>TermTk.TTkWidgets.listwidget._TTkListWidgetText</li>
+<li><a title="TermTk.TTkWidgets.listwidget.TTkAbstractListItem" href="listwidget.html#TermTk.TTkWidgets.listwidget.TTkAbstractListItem">TTkAbstractListItem</a></li>
 </ul>
 <h3>Methods</h3>
 <dl>
