--- a/TTkCore/ttk.html
+++ b/TTkCore/ttk.html
@@ -75,6 +75,7 @@ class TTk(TTkWidget):
 
     def __init__(self, *args, **kwargs):
         TTkWidget.__init__(self, *args, **kwargs)
+        self._name = kwargs.get(&#39;name&#39; , &#39;TTk&#39; )
         self.events = queue.Queue()
         self.key_events = queue.Queue()
         self.mouse_events = queue.Queue()
@@ -87,7 +88,7 @@ class TTk(TTkWidget):
         except OSError as e:
             print(f&#39;ERROR: {e}&#39;)
         TTkCfg.theme = TTkTheme()
-        TTkHelper.registerRootCanvas(self._canvas)
+        TTkHelper.registerRootWidget(self)
 
     frame = 0
     time = time.time()
@@ -146,30 +147,34 @@ class TTk(TTkWidget):
                     x,y = TTkHelper.absPos(focusWidget)
                     nmevt = mevt.clone(pos=(mevt.x-x, mevt.y-y))
                     focusWidget.mouseEvent(nmevt)
-                elif overlayWidget is not None:
-                    x,y,w,h=overlayWidget.geometry()
-                    if x &lt;= mevt.x &lt; x+w and y &lt;= mevt.y &lt; y+h:
-                        px,py = TTkHelper.absPos(overlayWidget)
-                        nmevt = mevt.clone(pos=(mevt.x-px, mevt.y-py))
-                        overlayWidget.mouseEvent(nmevt)
-                    else:
-                        self.mouseEvent(mevt)
                 else:
+                    # Sometimes the release event is not retrieved
+                    if focusWidget and focusWidget._pendingMouseRelease:
+                        focusWidget.mouseEvent(nmevt.clone(evt=TTkK.Release))
+                        focusWidget._pendingMouseRelease = False
                     self.mouseEvent(mevt)
             elif evt is TTkK.KEY_EVENT:
+                keyHandled = False
                 kevt = self.key_events.get()
+                # TTkLog.debug(f&#34;Key: {kevt}&#34;)
                 focusWidget = TTkHelper.getFocus()
                 overlayWidget = TTkHelper.getOverlay()
                 TTkLog.debug(f&#34;{focusWidget}&#34;)
                 if focusWidget is not None:
                     TTkHelper.execShortcut(kevt.key,focusWidget)
-                    focusWidget.keyEvent(kevt)
-                elif overlayWidget is not None:
-                    TTkHelper.execShortcut(kevt.key,overlayWidget)
-                    overlayWidget.keyEvent(kevt)
+                    keyHandled = focusWidget.keyEvent(kevt)
                 else:
                     TTkHelper.execShortcut(kevt.key)
-                pass
+                # Handle Next Focus Key Binding
+                if not keyHandled and \
+                   ((kevt.key == TTkK.Key_Tab and kevt.mod == TTkK.NoModifier) or
+                   ( kevt.key == TTkK.Key_Right )):
+                        TTkHelper.nextFocus(focusWidget if focusWidget else self)
+                # Handle Prev Focus Key Binding
+                if not keyHandled and \
+                   ((kevt.key == TTkK.Key_Tab and kevt.mod == TTkK.ShiftModifier) or
+                   ( kevt.key == TTkK.Key_Left )):
+                        TTkHelper.prevFocus(focusWidget if focusWidget else self)
             elif evt is TTkK.TIME_EVENT:
                 size = os.get_terminal_size()
                 self.setGeometry(0,0,size.columns,size.lines)
@@ -325,6 +330,7 @@ class TTk(TTkWidget):
 
     def __init__(self, *args, **kwargs):
         TTkWidget.__init__(self, *args, **kwargs)
+        self._name = kwargs.get(&#39;name&#39; , &#39;TTk&#39; )
         self.events = queue.Queue()
         self.key_events = queue.Queue()
         self.mouse_events = queue.Queue()
@@ -337,7 +343,7 @@ class TTk(TTkWidget):
         except OSError as e:
             print(f&#39;ERROR: {e}&#39;)
         TTkCfg.theme = TTkTheme()
-        TTkHelper.registerRootCanvas(self._canvas)
+        TTkHelper.registerRootWidget(self)
 
     frame = 0
     time = time.time()
@@ -396,30 +402,34 @@ class TTk(TTkWidget):
                     x,y = TTkHelper.absPos(focusWidget)
                     nmevt = mevt.clone(pos=(mevt.x-x, mevt.y-y))
                     focusWidget.mouseEvent(nmevt)
-                elif overlayWidget is not None:
-                    x,y,w,h=overlayWidget.geometry()
-                    if x &lt;= mevt.x &lt; x+w and y &lt;= mevt.y &lt; y+h:
-                        px,py = TTkHelper.absPos(overlayWidget)
-                        nmevt = mevt.clone(pos=(mevt.x-px, mevt.y-py))
-                        overlayWidget.mouseEvent(nmevt)
-                    else:
-                        self.mouseEvent(mevt)
                 else:
+                    # Sometimes the release event is not retrieved
+                    if focusWidget and focusWidget._pendingMouseRelease:
+                        focusWidget.mouseEvent(nmevt.clone(evt=TTkK.Release))
+                        focusWidget._pendingMouseRelease = False
                     self.mouseEvent(mevt)
             elif evt is TTkK.KEY_EVENT:
+                keyHandled = False
                 kevt = self.key_events.get()
+                # TTkLog.debug(f&#34;Key: {kevt}&#34;)
                 focusWidget = TTkHelper.getFocus()
                 overlayWidget = TTkHelper.getOverlay()
                 TTkLog.debug(f&#34;{focusWidget}&#34;)
                 if focusWidget is not None:
                     TTkHelper.execShortcut(kevt.key,focusWidget)
-                    focusWidget.keyEvent(kevt)
-                elif overlayWidget is not None:
-                    TTkHelper.execShortcut(kevt.key,overlayWidget)
-                    overlayWidget.keyEvent(kevt)
+                    keyHandled = focusWidget.keyEvent(kevt)
                 else:
                     TTkHelper.execShortcut(kevt.key)
-                pass
+                # Handle Next Focus Key Binding
+                if not keyHandled and \
+                   ((kevt.key == TTkK.Key_Tab and kevt.mod == TTkK.NoModifier) or
+                   ( kevt.key == TTkK.Key_Right )):
+                        TTkHelper.nextFocus(focusWidget if focusWidget else self)
+                # Handle Prev Focus Key Binding
+                if not keyHandled and \
+                   ((kevt.key == TTkK.Key_Tab and kevt.mod == TTkK.ShiftModifier) or
+                   ( kevt.key == TTkK.Key_Left )):
+                        TTkHelper.prevFocus(focusWidget if focusWidget else self)
             elif evt is TTkK.TIME_EVENT:
                 size = os.get_terminal_size()
                 self.setGeometry(0,0,size.columns,size.lines)
@@ -581,30 +591,34 @@ class TTk(TTkWidget):
                 x,y = TTkHelper.absPos(focusWidget)
                 nmevt = mevt.clone(pos=(mevt.x-x, mevt.y-y))
                 focusWidget.mouseEvent(nmevt)
-            elif overlayWidget is not None:
-                x,y,w,h=overlayWidget.geometry()
-                if x &lt;= mevt.x &lt; x+w and y &lt;= mevt.y &lt; y+h:
-                    px,py = TTkHelper.absPos(overlayWidget)
-                    nmevt = mevt.clone(pos=(mevt.x-px, mevt.y-py))
-                    overlayWidget.mouseEvent(nmevt)
-                else:
-                    self.mouseEvent(mevt)
             else:
+                # Sometimes the release event is not retrieved
+                if focusWidget and focusWidget._pendingMouseRelease:
+                    focusWidget.mouseEvent(nmevt.clone(evt=TTkK.Release))
+                    focusWidget._pendingMouseRelease = False
                 self.mouseEvent(mevt)
         elif evt is TTkK.KEY_EVENT:
+            keyHandled = False
             kevt = self.key_events.get()
+            # TTkLog.debug(f&#34;Key: {kevt}&#34;)
             focusWidget = TTkHelper.getFocus()
             overlayWidget = TTkHelper.getOverlay()
             TTkLog.debug(f&#34;{focusWidget}&#34;)
             if focusWidget is not None:
                 TTkHelper.execShortcut(kevt.key,focusWidget)
-                focusWidget.keyEvent(kevt)
-            elif overlayWidget is not None:
-                TTkHelper.execShortcut(kevt.key,overlayWidget)
-                overlayWidget.keyEvent(kevt)
+                keyHandled = focusWidget.keyEvent(kevt)
             else:
                 TTkHelper.execShortcut(kevt.key)
-            pass
+            # Handle Next Focus Key Binding
+            if not keyHandled and \
+               ((kevt.key == TTkK.Key_Tab and kevt.mod == TTkK.NoModifier) or
+               ( kevt.key == TTkK.Key_Right )):
+                    TTkHelper.nextFocus(focusWidget if focusWidget else self)
+            # Handle Prev Focus Key Binding
+            if not keyHandled and \
+               ((kevt.key == TTkK.Key_Tab and kevt.mod == TTkK.ShiftModifier) or
+               ( kevt.key == TTkK.Key_Left )):
+                    TTkHelper.prevFocus(focusWidget if focusWidget else self)
         elif evt is TTkK.TIME_EVENT:
             size = os.get_terminal_size()
             self.setGeometry(0,0,size.columns,size.lines)
