--- a/TTkWidgets/combobox.html
+++ b/TTkWidgets/combobox.html
@@ -76,8 +76,13 @@ class TTkComboBox(TTkWidget):
         self.setFocusPolicy(TTkK.ClickFocus + TTkK.TabFocus)
 
     def paintEvent(self):
-        color       = TTkCfg.theme.comboboxContentColor
-        borderColor = TTkCfg.theme.comboboxBorderColor
+
+        if self.hasFocus():
+            borderColor = TTkCfg.theme.comboboxBorderColorFocus
+            color       = TTkCfg.theme.comboboxContentColorFocus
+        else:
+            borderColor = TTkCfg.theme.comboboxBorderColor
+            color       = TTkCfg.theme.comboboxContentColor
         if self._id == -1:
             text = &#34;- select -&#34;
         else:
@@ -94,7 +99,7 @@ class TTkComboBox(TTkWidget):
         self.setFocus()
         self.update()
 
-    def mousePressEvent(self, evt):
+    def _pressEvent(self):
         frameHeight = len(self._list) + 2
         frameWidth = self.width()
         if frameHeight &gt; 20: frameHeight = 20
@@ -107,8 +112,21 @@ class TTkComboBox(TTkWidget):
         for item in self._list:
             listw.addItem(item)
         TTkHelper.overlay(self, frame, 0, 0)
+        listw.viewport().setFocus()
         self.update()
-        return True</code></pre>
+        return True
+
+    def mousePressEvent(self, evt):
+        self._pressEvent()
+        return True
+
+    def keyEvent(self, evt):
+        if ( evt.type == TTkK.Character and evt.key==&#34; &#34; ) or \
+           ( evt.type == TTkK.SpecialKey and evt.key == TTkK.Key_Enter ) or \
+           ( evt.type == TTkK.SpecialKey and evt.key == TTkK.Key_Down ):
+            self._pressEvent()
+            return True
+        return False</code></pre>
 </details>
 </section>
 <section>
@@ -203,8 +221,13 @@ class TTkComboBox(TTkWidget):
         self.setFocusPolicy(TTkK.ClickFocus + TTkK.TabFocus)
 
     def paintEvent(self):
-        color       = TTkCfg.theme.comboboxContentColor
-        borderColor = TTkCfg.theme.comboboxBorderColor
+
+        if self.hasFocus():
+            borderColor = TTkCfg.theme.comboboxBorderColorFocus
+            color       = TTkCfg.theme.comboboxContentColorFocus
+        else:
+            borderColor = TTkCfg.theme.comboboxBorderColor
+            color       = TTkCfg.theme.comboboxContentColor
         if self._id == -1:
             text = &#34;- select -&#34;
         else:
@@ -221,7 +244,7 @@ class TTkComboBox(TTkWidget):
         self.setFocus()
         self.update()
 
-    def mousePressEvent(self, evt):
+    def _pressEvent(self):
         frameHeight = len(self._list) + 2
         frameWidth = self.width()
         if frameHeight &gt; 20: frameHeight = 20
@@ -234,8 +257,21 @@ class TTkComboBox(TTkWidget):
         for item in self._list:
             listw.addItem(item)
         TTkHelper.overlay(self, frame, 0, 0)
+        listw.viewport().setFocus()
         self.update()
-        return True</code></pre>
+        return True
+
+    def mousePressEvent(self, evt):
+        self._pressEvent()
+        return True
+
+    def keyEvent(self, evt):
+        if ( evt.type == TTkK.Character and evt.key==&#34; &#34; ) or \
+           ( evt.type == TTkK.SpecialKey and evt.key == TTkK.Key_Enter ) or \
+           ( evt.type == TTkK.SpecialKey and evt.key == TTkK.Key_Down ):
+            self._pressEvent()
+            return True
+        return False</code></pre>
 </details>
 <h3>Ancestors</h3>
 <ul class="hlist">
